--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,19 @@ body{
     padding-top: 94px;
     padding-bottom: 94px;
 }
+.visually-hidden
+{
+position: absolute;
+ width: 1px;
+ height: 1px;
+ margin: -1px;
+border: 0;
+padding: 0;
+white-space: nowrap;
+ clip-path: inset(100%);
+ clip: rect(0 0 0 0);
+ overflow: hidden;
+}
 
 
 /* logo  */
@@ -199,10 +212,10 @@ margin-left: auto;
 /* benefits */
 
 
-.benefits-title{
+/* .benefits-title{
    visibility: hidden;
     
-}
+} */
 
 .benefits-list{
     display: flex;
